--- a/input/test-general.in
+++ b/input/test-general.in
@@ -18,43 +18,46 @@ inicio
     escreva("Resultado de d / 2: ");
     escreva(e);
 
-    texto1 := "Olá, " ;
+    texto1 := "Ola, " ;
     texto2 := "Mundo!" ;
     escreva("Mensagem concatenada: ");
-    escreva(texto1 + texto2);
 
 
-    se (a < b) entao {
-        escreva("a é menor que b");
+    se (a < b) entao 
+        escreva("a e menor que b");
 
-        se (c > b) entao {
-            escreva("c é maior que b e maior que a");
-        } senao {
-            escreva("c é maior que a, mas menor ou igual a b");
-        }
-    } senao {
-        escreva("a é maior ou igual a b");
-    }
+        se (c > b) entao 
+            escreva("c e maior que b e maior que a");
+        senao 
+            escreva("c e maior que a, mas menor ou igual a b");
+        fimse
+        
+    senao 
+        escreva("a e maior ou igual a b");
+    fimse
+    
 
     escreva("Iniciando loop while: ");
-    enquanto (a > 0) faca {
+    enquanto (a > 0) faca 
         escreva(a);
         a := a - 1;
 
         escreva("Iniciando while aninhado: ");
-        enquanto (b > 18) faca {
+        enquanto (b > 18) faca 
             escreva(b);
             b := b - 1;
-        }
+        fimenquanto
+        
         escreva("While aninhado finalizado");
-    }
+    fimenquanto
+    
     escreva("Loop while finalizado");
 
     escreva("Iniciando loop do-while: ");
-    faca {
+    faca
         escreva(b);
         b := b - 1;
-    } enquanto (b > 18);
+    enquanto (b > 18);
 
     escreva("Teste completo finalizado.");
 
