--- a/input/test-general.in
+++ b/input/test-general.in
@@ -5,63 +5,59 @@ variavel d, e : real;
 variavel texto1, texto2 : texto;
 
 inicio
-    // Atribuições simples
     a := 10;
     b := 20;
     c := a + b;
 
-    // Teste de operação aritmética mais complexa
     d := 5.5;
     e := d / 2.0;
 
-    escreva("Resultado de a + b: ");
-    escreva(c); // Deve imprimir 30
+    escreva( "Resultado de a + b: " );
+    escreva(c);
 
     escreva("Resultado de d / 2: ");
-    escreva(e); // Deve imprimir 2.75
+    escreva(e);
 
-    // Teste de concatenação de textos
-    texto1 := "Olá, ";
-    texto2 := "Mundo!";
+    texto1 := "Ola, " ;
+    texto2 := "Mundo!" ;
     escreva("Mensagem concatenada: ");
-    escreva(texto1 + texto2); // Deve imprimir "Olá, Mundo!"
 
-    // Teste de condicional if-else aninhado
-    se (a < b) entao {
-        escreva("a é menor que b");
 
-        // Condicional dentro de outra condicional
-        se (c > b) entao {
-            escreva("c é maior que b e maior que a");
-        } senao {
-            escreva("c é maior que a, mas menor ou igual a b");
-        }
-    } senao {
-        escreva("a é maior ou igual a b");
-    } // Deve imprimir "a é menor que b" e "c é maior que b e maior que a"
+    se (a < b) entao 
+        escreva("a e menor que b");
 
-    // Teste de laço while
+        se (c > b) entao 
+            escreva("c e maior que b e maior que a");
+        senao 
+            escreva("c e maior que a, mas menor ou igual a b");
+        fimse
+        
+    senao 
+        escreva("a e maior ou igual a b");
+    fimse
+    
+
     escreva("Iniciando loop while: ");
-    enquanto (a > 0) faca {
-        escreva(a); // Deve imprimir de 10 até 1
+    enquanto (a > 0) faca 
+        escreva(a);
         a := a - 1;
 
-        // Laço while dentro de outro while
         escreva("Iniciando while aninhado: ");
-        enquanto (b > 18) faca {
-            escreva(b); // Deve imprimir 20, 19
+        enquanto (b > 18) faca 
+            escreva(b);
             b := b - 1;
-        }
+        fimenquanto
+        
         escreva("While aninhado finalizado");
-    }
+    fimenquanto
+    
     escreva("Loop while finalizado");
 
-    // Teste de laço do-while
     escreva("Iniciando loop do-while: ");
-    faca {
-        escreva(b); // Deve imprimir o valor de b, se ainda for maior que 18
+    faca
+        escreva(b);
         b := b - 1;
-    } enquanto (b > 18); // Deve rodar 2 vezes se b foi reiniciado
+    enquanto (b > 18);
 
     escreva("Teste completo finalizado.");
 
