--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/Projects/Projeto-Compiladores-2024q2/antlr-4.13.2-complete.jar"/>
+	<classpathentry kind="lib" path="./antlr-4.13.2-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
