--- a/input/itens_obrigatorios/item8.in
+++ b/input/itens_obrigatorios/item8.in
@@ -1,5 +1,10 @@
 programa variavelIndefinida
+variavel y : inteiro;
+variavel y : inteiro;
 inicio
-y := 10;  // Deve emitir um aviso ou erro
+
+y := 10; 
+
+
 fim
 fimprog
